<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        style="@style/ItemLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/app_icon_size"
            android:layout_height="@dimen/app_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_ten"
            android:layout_marginRight="@dimen/padding_ten"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/app_name"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/application_name"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/cpu_usage"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cpu_usage"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/memory_usage"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/memory_usage"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/battery_usage"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/battery_usage"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/pid"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pid"
            />
    </LinearLayout>
</LinearLayout>