<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="4dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@android:string/untitled"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="?android:textColorSecondary"
                    />

                <TextView
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/loading"
                    android:textColor="?android:textColorSecondary"
                    android:textStyle="italic"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/cpu_usage"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cpu_usage"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <TextView
            android:id="@+id/memory_usage"
            style="@style/ItemTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/memory_usage"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/dormant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding_five"
                android:background="@drawable/button_style_shape"
                android:padding="@dimen/padding_five"
                android:text="@string/dormant"
                />

            <TextView
                android:id="@+id/add_or_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding_five"
                android:background="@drawable/button_style_shape"
                android:padding="@dimen/padding_five"
                android:text="@string/non_dormant"
                />

            <TextView
                android:id="@+id/prevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding_five"
                android:background="@drawable/button_style_shape"
                android:padding="@dimen/padding_five"
                android:text="@string/auto_prevent"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/item_prevent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@android:string/yes"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>